--- a/client/public/css/news.css
+++ b/client/public/css/news.css
@@ -103,9 +103,12 @@
 
 .content.news .new-article-btn {
     position: absolute;
+    padding: 0.4vw 0.8vw;
     right: 0vw;
-    top: 1vw;
+    top: 1.4vw;
     color: darkslategray;
+    font-size: 1.2vw;
+    background: rgb(255 255 255 / 40%);
 }
 
 .content.news .new-article-btn:hover {
